initial commit changed gitignore
